// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Shortcut renders passed className 1`] = `
<span
  class="my-class"
>
  shortcut text
</span>
`;

exports[`Shortcut renders the shortcut display text when a string is passed as the shortcut 1`] = `
<span>
  shortcut text
</span>
`;
